--- a/src/client/app.pug
+++ b/src/client/app.pug
@@ -25,7 +25,7 @@ html(lang="en")
 
   body
 
-    div(id="root")
+    div(id="app")
 
     script.
       { const script = document.createElement('script');
