--- a/src/client/app.pug
+++ b/src/client/app.pug
@@ -20,7 +20,7 @@ html(lang="en")
       if (!process.env.HOT) {
         const link = document.createElement('link');
         link.rel = 'stylesheet';
-        link.href = 'index.min.css';
+        link.href = 'style.min.css';
         document.write(link.outerHTML); }
 
   body
