update-app: vault

--- a/app/vault/templates/add_password_dialog.xml
+++ b/app/vault/templates/add_password_dialog.xml
@@ -1,16 +1,14 @@
 $def with (data=None)
-$if 'xml' == data['type']:
-  <?xml version="$(data['version'])" encoding="$(data['encoding'])"?>
+$if 'xml' == data['type']: <?xml version="$(data['version'])" encoding="$(data['encoding'])"?>
 <ui version="$(data['body']['version'])">
   $for item in data['body']['list']:
-    $if 'class' == item['type']:
-      <class>$(item['value'])</class>
+    $if 'class' == item['type']: <class>$(item['value'])</class>
     $elif 'widget' == item['type']:
       <widget class="$(item['class'])" name="$(item['name'])">
         $for i in item['list']:
           $if 'property' == i['type']:
             <property name="$(i['name'])">
-             $for div in i['list']:
+              $for div in i['list']:
                 $if 'rect' == div['type']:
                   <rect>
                     <x>$(div['x'])</x>
@@ -26,92 +24,59 @@ $if 'xml' == data['type']:
               $for div in i['list']:
                 $if 'item' == div['type']:
                   $for d in div['list']:
-                    <item>
-                      $if d['type'] in ['widget', 'layout', 'spacer']:
+                    $if d['type'] in ['widget', 'layout', 'spacer']:
+                      <item>
                         $if 'widget' == d['type']: <widget class="$(d['class'])" name="$(d['name'])">
                         $elif 'layout' == d['type']: <layout class="$(d['class'])" name="$(d['name'])">
                         $elif 'spacer' == d['type']: <spacer name="$(d['name'])">
                           $for j in d['list']:
                             $if 'item' == j['type']:
                               $for k in j['list']:
-                                $if 'widget' == k['type']:
+                                $if k['type'] in ['widget', 'spacer', 'property']:
                                   <item>
-                                    <widget class="$(k['class'])" name="$(k['name'])">
-                                      $for m in k['list']:
-                                        $if 'property' == m['type']:
-                                          $if 'stdset' in m:
-                                            <property name="$(m['name'])" stdset="$(m['stdset'])">
-                                          $else:
-                                            <property name="$(m['name'])">
-                                          $for n in m['list']:
-                                            $if 'string' == n['type']:
-                                              $if 'value' in n:
-                                                <string>$(n['value'])</string>
-                                              $else:
-                                                <string/>
-                                          </property>
-                                    </widget>
-                                  </item>
-                                $elif 'spacer' == k['type']:
-                                  <item>
-                                    <spacer name="$(k['name'])">
+                                    $if 'widget' == k['type']: <widget class="$(k['class'])" name="$(k['name'])">
+                                    $elif 'spacer' == k['type']: <spacer name="$(k['name'])">
+                                    $elif 'property' == k['type']: <property name="$(k['name'])">
                                       $for m in k['list']:
                                         $if 'property' == m['type']:
                                           $if 'stdset' in m: <property name="$(m['name'])" stdset="$(m['stdset'])">
                                           $else: <property name="$(m['name'])">
-                                          $for n in m['list']:
-                                            $if 'enum' == n['type']: <enum>$(n['value'])</enum>
-                                            $elif 'size' == n['type']:
-                                              <size>
-                                                <width>$(n['width'])</width>
-                                                <height>$(n['height'])</height>
-                                              </size>
-                                          </property>
-                                    </spacer>
-                                  </item>
-                                $elif 'property' == k['type']:
-                                  <item>
-                                    <property name="$(k['name'])">
-                                      $for l in k['list']:
-                                        $if 'string' == l['type']:
-                                          $if 'value' in l:
-                                            <string>$(l['value'])</string>
-                                          $else:
-                                            <string/>
-                                        $elif 'number' == l['type']:
-                                          <number>$(l['value'])</number>
-                                        $elif 'enum' == l['type']:
-                                          <enum>$(l['value'])</enum>
-                                    </property>
+                                            $for n in m['list']:
+                                              $if 'string' == n['type'] and 'value' in n: <string>$(n['value'])</string>
+                                              $elif 'string' == n['type']: <string/>
+                                              $elif 'enum' == n['type']: <enum>$(n['value'])</enum>
+                                              $elif 'number' == n['type']: <number>$(n['value'])</number>
+                                              $elif 'size' == n['type']:
+                                                <size>
+                                                  <width>$(n['width'])</width>
+                                                  <height>$(n['height'])</height>
+                                                </size>
+                                          $if 'property' == m['type']: </property>
+                                    $if 'widget' == k['type']: </widget>
+                                    $elif 'spacer' == k['type']: </spacer>
+                                    $elif 'property' == k['type']: </property>
                                   </item>
                             $elif 'property' == j['type']:
                               <property name="$(j['name'])">
                                 $for k in j['list']:
-                                  $if 'string' == k['type']:
-                                    $if 'value' in k:
-                                      <string>$(k['value'])</string>
-                                    $else:
-                                      <string/>
+                                  $if 'string' == k['type'] and 'value' in k: <string>$(k['value'])</string>
+                                  $elif 'string' == k['type']: <string/>
+                                  $elif 'number' == k['type']: <number>$(k['value'])</number>
+                                  $elif 'enum' == k['type']: <enum>$(k['value'])</enum>
+                                  $elif 'set' == k['type']: <set>$(k['value'])</set>
                                   $elif 'size' == k['type']:
                                     <size>
                                       <width>$(k['width'])</width>
                                       <height>$(k['height'])</height>
                                     </size>
-                                  $elif 'number' == k['type']:
-                                    <number>$(k['value'])</number>
-                                  $elif 'enum' == k['type']:
-                                    <enum>$(k['value'])</enum>
-                                  $elif 'set' == k['type']:
-                                    <set>$(k['value'])</set>
                               </property>
                         $if 'widget' == d['type']: </widget>
                         $elif 'layout' == d['type']: </layout>
                         $elif 'spacer' == d['type']: </spacer>
-                    </item>
+                      </item>
             </layout>
       </widget>
-    $elif 'resources' == item['type']:
-      <resources/>
+    $elif 'resources' == item['type']: <resources/>
     $elif 'connections' == item['type']:
       <connections>
         $for connection in item['list']:
