add-vault: partials

--- a/app/vault/templates/add_password_dialog.xml
+++ b/app/vault/templates/add_password_dialog.xml
@@ -33,29 +33,7 @@ $if 'xml' == data['type']: <?xml version="$(data['version'])" encoding="$(data['
                             $if 'item' == j['type']:
                               $for k in j['list']:
                                 $if k['type'] in ['widget', 'spacer', 'property']:
-                                  <item>
-                                    $if 'widget' == k['type']: <widget class="$(k['class'])" name="$(k['name'])">
-                                    $elif 'spacer' == k['type']: <spacer name="$(k['name'])">
-                                    $elif 'property' == k['type']: <property name="$(k['name'])">
-                                      $for m in k['list']:
-                                        $if 'property' == m['type']:
-                                          $if 'stdset' in m: <property name="$(m['name'])" stdset="$(m['stdset'])">
-                                          $else: <property name="$(m['name'])">
-                                            $for n in m['list']:
-                                              $if 'string' == n['type'] and 'value' in n: <string>$(n['value'])</string>
-                                              $elif 'string' == n['type']: <string/>
-                                              $elif 'enum' == n['type']: <enum>$(n['value'])</enum>
-                                              $elif 'number' == n['type']: <number>$(n['value'])</number>
-                                              $elif 'size' == n['type']:
-                                                <size>
-                                                  <width>$(n['width'])</width>
-                                                  <height>$(n['height'])</height>
-                                                </size>
-                                          $if 'property' == m['type']: </property>
-                                    $if 'widget' == k['type']: </widget>
-                                    $elif 'spacer' == k['type']: </spacer>
-                                    $elif 'property' == k['type']: </property>
-                                  </item>
+                                  $:render('item',k)
                             $elif 'property' == j['type']:
                               <property name="$(j['name'])">
                                 $for k in j['list']:
