--- a/app/vault/templates/add_password_dialog.xml
+++ b/app/vault/templates/add_password_dialog.xml
@@ -19,40 +19,12 @@ $if 'xml' == data['type']: <?xml version="$(data['version'])" encoding="$(data['
                 $elif 'string' == div['type']:
                   <string>$(div['value'])</string>
             </property>
-          $elif 'layout' == i['type']:
-            <layout class="$(i['class'])" name="$(i['name'])">
-              $for div in i['list']:
-                $if 'item' == div['type']:
-                  $for d in div['list']:
-                    $if d['type'] in ['widget', 'layout', 'spacer']:
-                      <item>
-                        $if 'widget' == d['type']: <widget class="$(d['class'])" name="$(d['name'])">
-                        $elif 'layout' == d['type']: <layout class="$(d['class'])" name="$(d['name'])">
-                        $elif 'spacer' == d['type']: <spacer name="$(d['name'])">
-                          $for j in d['list']:
-                            $if 'item' == j['type']:
-                              $for k in j['list']:
-                                $if k['type'] in ['widget', 'spacer', 'property']:
-                                  $:render('item',k)
-                            $elif 'property' == j['type']:
-                              <property name="$(j['name'])">
-                                $for k in j['list']:
-                                  $if 'string' == k['type'] and 'value' in k: <string>$(k['value'])</string>
-                                  $elif 'string' == k['type']: <string/>
-                                  $elif 'number' == k['type']: <number>$(k['value'])</number>
-                                  $elif 'enum' == k['type']: <enum>$(k['value'])</enum>
-                                  $elif 'set' == k['type']: <set>$(k['value'])</set>
-                                  $elif 'size' == k['type']:
-                                    <size>
-                                      <width>$(k['width'])</width>
-                                      <height>$(k['height'])</height>
-                                    </size>
-                              </property>
-                        $if 'widget' == d['type']: </widget>
-                        $elif 'layout' == d['type']: </layout>
-                        $elif 'spacer' == d['type']: </spacer>
-                      </item>
-            </layout>
+          $elif 'layout' == i['type']: <layout class="$(i['class'])" name="$(i['name'])">
+          $for div in i['list']:
+            $if 'item' == div['type']:
+              $for d in div['list']:
+                $:(render('item',env=d,factor=12))
+          $if 'layout' == i['type']: </layout>
       </widget>
     $elif 'resources' == item['type']: <resources/>
     $elif 'connections' == item['type']:
