update-app-vault: main.py

--- a/app/vault/templates/add_password_dialog.xml
+++ b/app/vault/templates/add_password_dialog.xml
@@ -10,12 +10,7 @@ $if 'xml' == data['type']: <?xml version="$(data['version'])" encoding="$(data['
             <property name="$(i['name'])">
               $for div in i['list']:
                 $if 'rect' == div['type']:
-                  <rect>
-                    <x>$(div['x'])</x>
-                    <y>$(div['y'])</y>
-                    <width>$(div['width'])</width>
-                    <height>$(div['height'])</height>
-                  </rect>
+                  $:(render('rect',env=div))
                 $elif 'string' == div['type']:
                   <string>$(div['value'])</string>
             </property>
