app-vault: update-main.py

--- a/app/vault/templates/add_password_dialog.xml
+++ b/app/vault/templates/add_password_dialog.xml
@@ -21,7 +21,8 @@ $if 'xml' == data['type']: <?xml version="$(data['version'])" encoding="$(data['
                 $:(render('item',env=d,factor=12))
           $if 'layout' == i['type']: </layout>
       </widget>
-    $elif 'resources' == item['type']: <resources/>
+    $elif 'resources' == item['type']:
+      $:(render('resources',env=item))
     $elif 'connections' == item['type']:
       <connections>
         $for connection in item['list']:
