--- a/app/vault/view/mainwindow.ui
+++ b/app/vault/view/mainwindow.ui
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>TrezorPass</string>
+   <string>Vault</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_3">
